# websole

./: .bumpversion.cfg  .dockerignore  .gitignore  .prettierrc  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  pyproject.toml  render.yaml  requirements_dev.txt  tox.ini
.codesandbox/: tasks.json
.github/workflows/: ci.yml  docker.yml  exec.yml  pypi.yml  stale.yml
examples/: Dockerfile  Dockerfile.useconfig  README.md  config.yml  docker-compose.yml  your-program.sh
tests/: test_cli.py  test_web.py
websole/: __init__.py  app.py
websole/templates/: 404.html  console.html  login.html
websole/templates/assets/bootstrap/css/: bootstrap.min.css
websole/templates/assets/css/: styles.css
websole/templates/assets/js/: console.js
